samples/_failures_safe/1761073026_80aed1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07e67b30.c: In function ‘parser_init’:
./samples/SAFE/__tmp_07e67b30.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
